# happah-core

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile.am  README.md  autogen.sh  configure.ac  notes.md
cmake/: FindGLM.cmake
debian/: README.Debian  README.source  changelog  control  copyright  gbp.conf  happah-core.cron.d.ex  happah-core.default.ex  happah-core.doc-base.EX  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch.ex
doc/: bezier-quad-mesh-control-polgon.tex  bezier-quad-mesh-control-polygon.tex  bezier-triangle-mesh-control-polygon.tex
lib/: Makefile.am  test.cpp
lib/happah/: Eigen.h  Eigen.hpp  Happah.cpp  Happah.h  Happah.hpp  format.h  format.hpp  readers.h  writers.h
lib/happah/format/: default.h  default.hpp  hph.h  hph.hpp  obj.cpp  obj.h  obj.hpp  off.cpp  off.h  off.hpp  xyz.h  xyz.hpp
lib/happah/formats/: off.cpp  off.h
lib/happah/geometries/: BezierTriangle.hpp  BezierTriangleMesh.cpp  BezierTriangleMesh.hpp  Circle.cpp  Circle.h  Circle.hpp  Curve.h  Curve.hpp  DiskEmbedding.h  DiskEmbedding.hpp  Geometry.h  Geometry.hpp  LoopBoxSpline.cpp  LoopBoxSpline.h  LoopBoxSpline.hpp  LoopBoxSplineMesh.h  LoopBoxSplineMesh.hpp  Loops.h  Loops.hpp  Mesh.h  Mesh.hpp  Model.h  Model.hpp  NutChain.hpp  Plane.cpp  Plane.h  Plane.hpp  QuadMesh.h  QuadMesh.hpp  Ray.cpp  Ray.h  Ray.hpp  RectangularTorusChain.cpp  RectangularTorusChain.h  RectangularTorusChain.hpp  RectangularTorusRing.cpp  RectangularTorusRing.h  RectangularTorusRing.hpp  SegmentLoops.h  SegmentLoops.hpp  (+44 more)
lib/happah/geometry/: BezierQuadMesh.hpp  BezierTriangle.hpp  BezierTriangleMesh.cpp  BezierTriangleMesh.hpp  Circle.cpp  Circle.hpp  DiskEmbedding.hpp  LoopBoxSpline.hpp  LoopBoxSplineMesh.hpp  Nut.hpp  NutChain.hpp  NutRing.hpp  Plane.cpp  Plane.hpp  QuadMesh.cpp  QuadMesh.hpp  Ray.hpp  RectangularCuboid.hpp  Sphere.cpp  Sphere.hpp  Triangle.hpp  TriangleArray.hpp  TriangleGraph.cpp  TriangleGraph.hpp  TriangleMesh.cpp  TriangleMesh.hpp  Vertex.hpp  VertexCloud.hpp
lib/happah/importers/: off.h
lib/happah/io/readers/: ReaderHPH.cpp  ReaderHPH.h  ReaderLOP.cpp  ReaderLOP.h  ReaderOFF.cpp  ReaderOFF.h  ReaderUtils.h
lib/happah/io/writers/: WriterHPH.cpp  WriterHPH.h  WriterOFF.cpp  WriterOFF.h
lib/happah/math/: BasisBuilder.cpp  BasisBuilder.h  BasisBuilder.hpp  BezierPatch.h  BoxSpline.cpp  BoxSpline.h  CirclePacking.cpp  CirclePacking.hpp  CirclePackingMetric.cpp  CirclePackingMetric.h  CirclePackingMetric.hpp  HexagonDecomposition.h  HexagonDecomposition.hpp  HyperbolicSpace.cpp  HyperbolicSpace.h  HyperbolicSpace.hpp  MathUtils.h  MathUtils.hpp  PantsDecomposition.h  PantsDecomposition.hpp  ProjectiveStructure.cpp  ProjectiveStructure.h  ProjectiveStructure.hpp  RigidAffineTransformation.h  RigidAffineTransformation.hpp  Space.cpp  Space.h  Space.hpp  TriangleDecomposition.h  TriangleDecomposition.hpp  TriangleRefinementScheme.cpp  TriangleRefinementScheme.h  TriangleRefinementScheme.hpp  functions.hpp  nlopt.cpp  nlopt.h
lib/happah/readers/: ReaderHPH.cpp  ReaderLOP.cpp  ReaderLOP.h  ReaderOFF.cpp  ReaderOFF.h  hph.h  off.cpp  off.h
lib/happah/util/: BezierTriangleSubdivider.hpp  ProxyArray.hpp  RectangularCuboidLayout.hpp  visitors.hpp
lib/happah/utils/: Arrays.h  Arrays.hpp  ControlPointIndexer.cpp  ControlPointIndexer.h  ControlPointIndexer.hpp  CurveUtilsBEZ.h  CurveUtilsBEZ.hpp  DeindexedArray.h  DeindexedArray.hpp  GeometryUtils.cpp  GeometryUtils.h  GeometryUtils.hpp  InterpolatorPCT.h  InterpolatorPCT.hpp  InterpolatorSCT.h  InterpolatorSCT.hpp  IteratorJoiner.hpp  LoopSubdivider.h  MeshUtils.h  MeshUtils.hpp  PantsDecomposer.h  PantsDecomposer.hpp  ProjectiveStructureUtils.h  ProjectiveStructureUtils.hpp  ProxyArray.hpp  SegmentUtils.h  SegmentUtils.hpp  ShortestPathFinder.h  ShortestPathFinder.hpp  SurfaceExamplesBEZ.cpp  SurfaceExamplesBEZ.h  SurfaceSplineConstrainerBEZ.h  SurfaceSplineConstrainerBEZ.hpp  SurfaceSplineSubdividerBEZ.h  SurfaceSplineUtilsBEZ.h  SurfaceSubdividerBEZ.h  SurfaceSubdividerBEZ.hpp  SurfaceUtilsBEZ.cpp  SurfaceUtilsBEZ.h  SurfaceUtilsBEZ.hpp  (+6 more)
lib/happah/weighers/: ConstantWeigher.cpp  ConstantWeigher.h  ConstantWeigher.hpp  EdgeLengthWeigher.h  EdgeLengthWeigher.hpp  HoleyWallWeigher.h  HoleyWallWeigher.hpp  HoleyWallsWeigher.h  HoleyWallsWeigher.hpp  TraversableEdgeLengthWeigher.h  TraversableEdgeLengthWeigher.hpp
lib/happah/writers/: Writer.h  WriterHPH.cpp  WriterHPH.h  WriterOFF.cpp  WriterOFF.h  hph.h  off.h
test/: Makefile.am
test/happah/: test-template.cpp
test/happah/geometries/Circle/: intersect.cpp
test/happah/geometries/SurfaceSplineBEZ/: DeltasEnumerator.cpp  NablasEnumerator.cpp
test/happah/geometry/BezierQuadMesh/: QuadsEnumerator.cpp
test/happah/geometry/BezierTriangleMesh/: DeltasEnumerator.cpp  NablasEnumerator.cpp  RowEnumerator.cpp  is_g1.cpp
test/happah/geometry/Circle/: intersect.cpp
test/happah/geometry/DiskEmbedding/: cut-to-disk.cpp  edge-walker.cpp  fp-simple.cpp  simplified-embedding.cpp
test/happah/geometry/QuadMesh/: SpokesEnumerator.cpp
test/happah/geometry/TriangleGraph/: analyze.cpp  shorten_cut.cpp  undegenerate.cpp
test/happah/math/HyperbolicSpace/: construct-polygon.cpp  deck-transformations.cpp
